--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-17.0.0.tar.gz",
     "react-native-global-props": "^1.1.1",
     "react-native-keyboard-aware-scroll-view": "^0.2.9",
+    "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-persist": "^4.8.0"
   }
 }
