--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lato-font": "^3.0.0",
     "react": "16.2.0",
     "react-native": "0.52.0",
+    "react-native-elements": "^0.19.0",
     "react-navigation": "^1.1.1",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
